# fair-seldonian

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  prepare-release.yml  publish.yml
changes/: ci-matrix.added.md  circleci.added.md  coverage.added.md  dependabot.added.md  docs-deploy.added.md  pep8-naming.changed.md  py-typed.added.md  pyrefly.added.md  python314.added.md  release-pipeline.added.md  ruff-formatting.changed.md  seldonian-config.added.md  type-safety.fixed.md
docs/: conf.py  index.rst  intro.rst  quickstart.html  quickstart.rst  references.rst  theory.rst  variants.rst
docs/api/: fair_seldonian.algorithms.rst  fair_seldonian.constraints.rst  fair_seldonian.data.rst  fair_seldonian.experiments.rst  fair_seldonian.models.rst  fair_seldonian.rst
sphinx/: quickstart.rst
src/fair_seldonian/: __init__.py  config.py
src/fair_seldonian/algorithms/: __init__.py  qsa.py
src/fair_seldonian/constraints/: __init__.py  bounds.py  expression_tree.py  expression_tree_ext.py  inequalities.py
src/fair_seldonian/data/: __init__.py  synthetic.py
src/fair_seldonian/experiments/: __init__.py  plots.py  results.py  runner.py
src/fair_seldonian/models/: __init__.py  logistic_regression.py
tests/: simple_test.py  test_bounds.py  test_config.py  test_data.py  test_expression_tree.py  test_expression_tree_ext.py  test_inequalities.py  test_models.py  test_qsa.py
