[project]
name = "fair-seldonian"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "torch",
    "scikit-learn",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
experiments = ["ray"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fair_seldonian"]

[dependency-groups]
dev = [
    "pyrefly>=1.0.0",
]

[tool.pyrefly]
project_includes = ["src/"]
python_version = "3.13"
