[project]
name = "fair-seldonian"
dynamic = ["version"]
description = "Fairness-constrained machine learning using Seldonian algorithms with confidence bound optimizations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Parul Gupta" },
]
keywords = ["fairness", "seldonian", "machine-learning", "safety", "constraints"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "torch",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
experiments = ["ray"]
plots = ["matplotlib"]

[project.urls]
Homepage = "https://github.com/parulgupta1004/fair-seldonian"
Documentation = "https://parulgupta1004.github.io/fair-seldonian/index.html"
Repository = "https://github.com/parulgupta1004/fair-seldonian"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/fair_seldonian/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fair_seldonian"]

[dependency-groups]
dev = [
    "pyrefly>=1.0.0",
    "pytest>=8.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=3.0",
    "matplotlib",
]

[tool.pyrefly]
project_includes = ["src/"]
python_version = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
