[project]
name = "fair-seldonian"
dynamic = ["version"]
description = "Fairness-constrained machine learning using Seldonian algorithms with confidence bound optimizations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Parul Gupta" },
]
keywords = ["fairness", "seldonian", "machine-learning", "safety", "constraints"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.23; python_version<'3.14'",
    "numpy>=2.3.2; python_version>='3.14'",
    "pandas>=1.5; python_version<'3.14'",
    "pandas>=2.3.3; python_version>='3.14'",
    "scikit-learn>=1.2; python_version<'3.14'",
    "scikit-learn>=1.8.0; python_version>='3.14'",
    "scipy>=1.10; python_version<'3.14'",
    "scipy>=1.16.1; python_version>='3.14'",
    "torch>=2.0; python_version<'3.14'",
    "torch>=2.9.0; python_version>='3.14'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "coverage>=7.6.1"]
experiments = ["ray"]
plots = ["matplotlib"]

[project.urls]
Homepage = "https://github.com/parulgupta1004/fair-seldonian"
Documentation = "https://parulgupta1004.github.io/fair-seldonian/index.html"
Repository = "https://github.com/parulgupta1004/fair-seldonian"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/fair_seldonian/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = ["results/", "docs/", ".github/", "exp/"]

[tool.hatch.build.targets.wheel]
packages = ["src/fair_seldonian"]

[dependency-groups]
dev = [
    "pyrefly>=1.0.0",
    "pytest>=8.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=3.0",
    "matplotlib",
]

[tool.pyrefly]
project_includes = ["src/"]
python_version = "3.14"

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.towncrier]
package = "fair_seldonian"
directory = "changes"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
title_format = "## {version}"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=fair_seldonian --cov-branch --cov-report=term-missing"

[tool.coverage.run]
source = ["fair_seldonian"]

[tool.coverage.report]
exclude_lines = [
    "if __name__",
    "pragma: no cover",
]
